<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/title"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="32sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineHeight="27sp"
            android:text="@string/description"
            android:textAlignment="center"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <SeekBar
                android:id="@+id/rollSeeker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="80" />

            <TextView
                android:id="@+id/rollValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="20"
                android:text="@string/defaultSliderValue"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textColor="@color/colorAccent" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/rollCountLabel"
            android:textAlignment="center"
            android:textColor="@color/colorAccent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <SeekBar
                android:id="@+id/personSeeker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="80" />

            <TextView
                android:id="@+id/personValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="20"
                android:text="@string/defaultSliderValue"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textColor="@color/colorAccent" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/personCountLabel"
            android:textAlignment="center"
            android:textColor="@color/colorAccent" />

        <Button
            android:id="@+id/resultButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:background="@color/colorPrimary"
            android:text="@string/resultButtonLabel"
            android:textColor="@color/colorBackground" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>